--- a/MAILCONNECTOR_fr.po
+++ b/MAILCONNECTOR_fr.po
@@ -4,97 +4,55 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: NetworkUser\n"
+"Project-Id-Version: MailConnector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-03-07 11:30+0100\n"
-"PO-Revision-Date: 2007-03-07 11:31+0100\n"
+"POT-Creation-Date: 2007-10-15 11:04+0200\n"
+"PO-Revision-Date: 2007-10-15 11:07+0200\n"
 "Last-Translator: Eric Brison <eric.brison@anakeen.com>\n"
 "Language-Team: French <distrib@anakeen.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Create User From LDAP"
-msgstr "Créer un utilisateur à partir de l'annuaire LDAP"
-
-msgid "Name or login"
-msgstr "Nom ou login"
-
-msgid "Result"
-msgstr "Résultat"
-
-msgid "Network users"
-msgstr "Utilisateurs réseaux"
-
-msgid "Network users and LDAP authentification"
-msgstr "Utilisateurs réseaux et authentification LDAP"
+#, c-format
+msgid "imap folder %s not found"
+msgstr "dossier IMAP %s non trouvé"
 
 #, c-format
-msgid "cannot create user %s: %s"
-msgstr "ne peut créer l'utilisateur %s : %s"
+msgid "%d messages transfered"
+msgstr "%d messages transférés"
 
 #, c-format
-msgid "user %s not exists for FREEDOM"
-msgstr "l'utilisateur %s existe pour FREEDOM"
+msgid "no new messages in imap %s folder"
+msgstr "pas de nouveau message pour le dossier %s"
+
+msgid "Mail connector"
+msgstr "Connecteur de messagerie"
+
+msgid "Copy messages from IMAP to freedom"
+msgstr "Copie de messages depuis IMAP vers freedom"
+
+msgid "test connection with IMAP server"
+msgstr "test de connexion vers le serveur IMAP"
+
+msgid "retrieves messages from IMAP server"
+msgstr "récupération des messages depuis le serveur IMAP"
+
+msgid "connection OK"
+msgstr "connexion OK"
 
 #, c-format
-msgid "Unable to bind to LDAP server %s"
-msgstr "Impossible de joindre le serveur LDAP %s"
+msgid "%d messages transferred"
+msgstr "%d messages transférés"
 
 #, c-format
-msgid "Unable to connect to LDAP server %s"
-msgstr "Impossible de se connecter au serveur LDAP %s"
+msgid "%d messages to transferts"
+msgstr "%d messages à transférer"
 
-#, c-format
-msgid "Cannot create LDAP %s [%s] : %s"
-msgstr "Ne peut créer LDAP %s [%s] : %s"
+msgid "MB_To"
+msgstr "Pour"
 
-#, c-format
-msgid "Cannot find user [%s]"
-msgstr "Utilisateur inconnu [%s]"
+msgid "MB_Cc"
+msgstr "Copie à"
 
-#, c-format
-msgid "Find mutiple user with same id  [%s]"
-msgstr "Plusieurs utilisateur avec le même identifiant trouvés [%s]"
 
-#, c-format
-msgid "Cannot find group [%s]"
-msgstr "Groupe inconnu [%s]"
-
-#, c-format
-msgid "Find mutiple grp with same login  [%s]"
-msgstr "Plusieurs groupes avec le même identifiant trouvés [%s]"
-
-msgid "host of the LDAP"
-msgstr "adresse du serveur LDAP"
-
-msgid "base path of LDAP"
-msgstr "racine du LDAP"
-
-msgid "DN of user which can access of all user and group of the LDAP"
-msgstr "DN de l'utilisateur pouvant accéder au LDAP"
-
-msgid "password of the DN"
-msgstr "mot de passe du DN"
-
-msgid "kind of users LDAP for authentification"
-msgstr "type du LDAP : Active directory ou Posix"
-
-#~ msgid "Active Directory"
-#~ msgstr "Active Directory"
-
-#~ msgid "Active Directory Authentification"
-#~ msgstr "Anthentification Active Directory"
-
-#~ msgid "host of the ldap active directory"
-#~ msgstr "adresse du serveur LDAP"
-
-#~ msgid "base path of ldap"
-#~ msgstr "chemin racine du LDAP"
-
-#~ msgid ""
-#~ "DN of user which can access of all user and group of the Active directory"
-#~ msgstr "DN de l'utilisateur pouvant accéder au LDAP"
-
-#~ msgid "password of then DN"
-#~ msgstr "mot de passe du DN"
