--- a/MAILCONNECTOR_fr.po
+++ b/MAILCONNECTOR_fr.po
@@ -6,25 +6,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MailConnector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-10-15 11:04+0200\n"
-"PO-Revision-Date: 2007-10-15 11:07+0200\n"
+"POT-Creation-Date: 2007-10-17 17:38+0200\n"
+"PO-Revision-Date: 2007-10-17 17:42+0200\n"
 "Last-Translator: Eric Brison <eric.brison@anakeen.com>\n"
 "Language-Team: French <distrib@anakeen.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#, c-format
-msgid "imap folder %s not found"
-msgstr "dossier IMAP %s non trouvé"
-
-#, c-format
-msgid "%d messages transfered"
-msgstr "%d messages transférés"
-
-#, c-format
-msgid "no new messages in imap %s folder"
-msgstr "pas de nouveau message pour le dossier %s"
 
 msgid "Mail connector"
 msgstr "Connecteur de messagerie"
@@ -38,6 +26,30 @@ msgstr "test de connexion vers le serveur IMAP"
 msgid "retrieves messages from IMAP server"
 msgstr "récupération des messages depuis le serveur IMAP"
 
+msgid "View and create new mailboxes"
+msgstr "Voir et créer des boites d'échange pour le couriel"
+
+msgid "View my mailboxes"
+msgstr "Voir mes boîtes d'échange"
+
+#, c-format
+msgid "imap folder %s not found"
+msgstr "dossier IMAP %s non trouvé"
+
+#, c-format
+msgid "%d messages transfered"
+msgstr "%d messages transférés"
+
+#, c-format
+msgid "no new messages in imap %s folder"
+msgstr "pas de nouveau message pour le dossier %s"
+
+msgid "electronic messages cannot be modified"
+msgstr "les messages électroniques ne peuvent être modifiés"
+
+msgid "Service for verify new mail"
+msgstr "Service pour la vérifications des boites d'échange de couriel"
+
 msgid "connection OK"
 msgstr "connexion OK"
 
@@ -49,10 +61,49 @@ msgstr "%d messages transférés"
 msgid "%d messages to transferts"
 msgstr "%d messages à transférer"
 
+msgid "no new messages"
+msgstr "pas de nouveau message"
+
+msgid "one new message"
+msgstr "un nouveau message"
+
+#, c-format
+msgid "%s new messages"
+msgstr "%s nouveaux messages"
+
+#, c-format
+msgid "exchange mailboxes  -%d-"
+msgstr "Boîte d'échanges -%d-"
+
+msgid "timeout in second for waiting connection"
+msgstr "timeout en secondes pour les temps de connection"
+
 msgid "MB_To"
 msgstr "Pour"
 
 msgid "MB_Cc"
 msgstr "Copie à"
 
+msgid "Create new mailbox"
+msgstr "Créer une nouvelle boîte à lettres"
 
+msgid "Mailbox Name"
+msgstr "Nom de la boîte à lettre"
+
+msgid "IMAP Server"
+msgstr "Serveur IMAP"
+
+msgid "No mailboxes"
+msgstr "Pas de boîtes à lettre"
+
+msgid "open it in a new window"
+msgstr ""
+
+msgid "Retreive messages"
+msgstr "Récupérer les messages"
+
+msgid "Transfert"
+msgstr "Transférer"
+
+msgid "View only first five"
+msgstr "Seul les 5 premiers sont affichés"
