Convert emsg_date column to type timestamp without timezone (mailconnector-0.4.4-3)(closes #531)

--- a/MAILCONNECTOR_migr_0.4.4
+++ b/MAILCONNECTOR_migr_0.4.4
@@ -14,6 +14,8 @@ famsmsg=doc${famsmsg/ /}
 if [ '$famemsg' != 'doc' ]; then
    echo "change inherit $famemsg to $famsmsg"
 
+   PGSERVICE="$pgservice_freedom" \psql -c "ALTER TABLE $famemsg ALTER COLUMN emsg_date TYPE timestamp without time zone;"
+
    PGSERVICE="$pgservice_freedom" \psql -c "ALTER TABLE $famemsg ADD column emsg_refid text;ALTER TABLE $famemsg  INHERIT $famsmsg;ALTER TABLE $famemsg no INHERIT doc;" 
 
 fi
