--- a/MAILCONNECTOR_en.po
+++ b/MAILCONNECTOR_en.po
@@ -6,28 +6,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WORKSPACE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-10-23 12:26+0200\n"
+"POT-Creation-Date: 2013-01-31 13:31+0100\n"
 "PO-Revision-Date: 2001-03-14 00:54-0500\n"
 "Last-Translator: Eric Brison <eric.brison@anakeen.com>\n"
 "Language-Team: english-anakeen <distrib@anakeen.com>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
 "\n"
 
-msgid "min delay is 5 minutes"
-msgstr ""
-
 #, c-format
-msgid "profil for %s mailbox"
-msgstr ""
-
-#, c-format
-msgid "associated default profil for [ADOC %s] mailbox"
-msgstr ""
-
-#, c-format
-msgid "imap folder %s not found : %s"
+msgid "%d messages to transferts"
 msgstr ""
 
 #, c-format
@@ -35,89 +25,82 @@ msgid "%d messages transfered"
 msgstr ""
 
 #, c-format
-msgid "imap folder %s not found"
+msgid "%d messages transferred"
+msgstr ""
+
+#, c-format
+msgid "%s new messages"
+msgstr ""
+
+msgid "Access admin mailboxes"
+msgstr ""
+
+msgid "Copy messages from IMAP to freedom"
+msgstr ""
+
+msgid "Create new mailbox"
+msgstr ""
+
+msgid "Folder"
+msgstr ""
+
+msgid "IMAP Server"
+msgstr ""
+
+msgid "Mail connector"
+msgstr ""
+
+msgid "Mail connector admin"
+msgstr ""
+
+msgid "Mailbox Name"
+msgstr ""
+
+msgid "Manage linked mailboxes"
+msgstr ""
+
+msgid "Message Date"
+msgstr ""
+
+msgid "Messages log"
+msgstr ""
+
+msgid "Modify messages profils"
+msgstr ""
+
+msgid "No mailboxes"
+msgstr ""
+
+msgid "Retreive messages"
+msgstr ""
+
+msgid "Retrieve date"
 msgstr ""
 
 #, c-format
 msgid "Retrieve messages for %s mailbox"
 msgstr ""
 
-msgid "electronic messages cannot be modified"
-msgstr ""
-
-msgid "Mail connector"
-msgstr ""
-
-msgid "Copy messages from IMAP to freedom"
-msgstr ""
-
-msgid "test connection with IMAP server"
-msgstr ""
-
-msgid "retrieves messages from IMAP server"
-msgstr ""
-
-msgid "View and create new mailboxes"
-msgstr ""
-
 msgid "Service for verify new mail"
-msgstr ""
-
-msgid "Modify messages profils"
-msgstr ""
-
-msgid "View my mailboxes"
-msgstr ""
-
-msgid "MB_To"
-msgstr ""
-
-msgid "MB_Cc"
-msgstr ""
-
-msgid "Messages log"
-msgstr ""
-
-msgid "Retrieve date"
-msgstr ""
-
-msgid "Message Date"
 msgstr ""
 
 msgid "Subject"
 msgstr ""
 
-msgid "mbfrom"
-msgstr ""
-
-msgid "mbto"
-msgstr ""
-
-msgid "Create new mailbox"
-msgstr ""
-
-msgid "Mailbox Name"
-msgstr ""
-
-msgid "IMAP Server"
-msgstr ""
-
-msgid "Folder"
-msgstr ""
-
-msgid "No mailboxes"
-msgstr ""
-
-msgid "open it in a new window"
-msgstr ""
-
-msgid "Retreive messages"
-msgstr ""
-
 msgid "Transfert"
 msgstr ""
 
+msgid "View and create new mailboxes"
+msgstr ""
+
+msgid "View my mailboxes"
+msgstr ""
+
 msgid "View only first five"
+msgstr ""
+
+#, c-format
+msgid "associated default profil for [ADOC %s] mailbox"
 msgstr ""
 
 #, c-format
@@ -128,7 +111,24 @@ msgid "connection OK"
 msgstr ""
 
 #, c-format
-msgid "%d messages transferred"
+msgid "exchange mailboxes  -%d-"
+msgstr ""
+
+#, c-format
+msgid "imap folder %s not found"
+msgstr ""
+
+#, c-format
+msgid "imap folder %s not found : %s"
+msgstr ""
+
+msgid "mbfrom"
+msgstr ""
+
+msgid "mbto"
+msgstr ""
+
+msgid "min delay is 5 minutes"
 msgstr ""
 
 msgid "no message profil document has been defined"
@@ -140,16 +140,17 @@ msgstr ""
 msgid "one new message"
 msgstr ""
 
-#, c-format
-msgid "%s new messages"
+msgid "open it in a new window"
 msgstr ""
 
 #, c-format
-msgid "exchange mailboxes  -%d-"
+msgid "profil for %s mailbox"
 msgstr ""
 
-#, c-format
-msgid "%d messages to transferts"
+msgid "retrieves messages from IMAP server"
+msgstr ""
+
+msgid "test connection with IMAP server"
 msgstr ""
 
 msgid "timeout in second for waiting connection"
