--- a/locale/en/MAILCONNECTOR_en.po
+++ b/locale/en/MAILCONNECTOR_en.po
@@ -10,10 +10,10 @@ msgstr ""
 "PO-Revision-Date: 2001-03-14 00:54-0500\n"
 "Last-Translator: Eric Brison <eric.brison@anakeen.com>\n"
 "Language-Team: english-anakeen <distrib@anakeen.com>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
+"Language: \n"
 "\n"
 
 #, c-format
@@ -33,6 +33,10 @@ msgid "%s new messages"
 msgstr ""
 
 msgid "Access admin mailboxes"
+msgstr ""
+
+msgid ""
+"Can't find folder in documents creation, save document before choosing folder"
 msgstr ""
 
 msgid "Copy messages from IMAP to dynacase"
