--- a/locale/fr/MAILCONNECTOR_fr.po
+++ b/locale/fr/MAILCONNECTOR_fr.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: MailConnector\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-31 17:01+0100\n"
-"PO-Revision-Date: 2013-01-31 17:02+0100\n"
+"PO-Revision-Date: 2013-07-25 14:15+0200\n"
 "Last-Translator: Eric Brison <eric.brison@anakeen.com>\n"
 "Language-Team: French <distrib@anakeen.com>\n"
-"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fr\n"
 
 #, c-format
 msgid "%d messages to transferts"
@@ -33,6 +33,10 @@ msgstr "%s nouveaux messages"
 
 msgid "Access admin mailboxes"
 msgstr "Accès à l'administration des boîtes aux lettres"
+
+msgid ""
+"Can't find folder in documents creation, save document before choosing folder"
+msgstr "Impossible de trouver le dossier d'échange en création, sauvegardez votre document avant de choisir le dossier"
 
 msgid "Copy messages from IMAP to dynacase"
 msgstr "Copie des messages depuis IMAP"
